# IMS

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README-M2.md  README.md  docker-compose.full.yml  docker-compose.yml  fix_date_formats.md  justfile
.github/workflows/: ci.yml
crates/cuba-api/: Cargo.toml
crates/cuba-api/src/: lib.rs  openapi.rs  openapi_schema.rs
crates/cuba-api/src/dto/: mod.rs
crates/cuba-api/src/middleware/: mod.rs
crates/cuba-api/src/response/: mod.rs
crates/cuba-api/src/router/: catalog.rs  exception.rs  identity.rs  inbound_outbound.rs  inventory.rs  mod.rs  preissue.rs  returns_pmc.rs  stocktake_report.rs  warehouse.rs
crates/cuba-bootstrap/: Cargo.toml
crates/cuba-bootstrap/src/: lib.rs
crates/cuba-bootstrap/src/config/: mod.rs
crates/cuba-bootstrap/src/database/: mod.rs
crates/cuba-bootstrap/src/state/: mod.rs
crates/cuba-bootstrap/src/telemetry/: mod.rs
crates/cuba-cache/: Cargo.toml
crates/cuba-cache/src/: lib.rs
crates/cuba-catalog/: Cargo.toml
crates/cuba-catalog/src/: lib.rs
crates/cuba-catalog/src/application/: bom.rs  material.rs  mod.rs  party.rs  recovery_tpl.rs  route.rs  status_flow.rs
crates/cuba-catalog/src/domain/: mod.rs
crates/cuba-catalog/src/infrastructure/: bom_repo.rs  material_repo.rs  mod.rs  party_repo.rs  recovery_tpl_repo.rs  route_repo.rs  status_flow_repo.rs
crates/cuba-customer-return/: Cargo.toml
crates/cuba-customer-return/src/: lib.rs  repo.rs  service.rs
crates/cuba-defect/: Cargo.toml
crates/cuba-defect/src/: lib.rs
crates/cuba-defect/src/application/: mod.rs
crates/cuba-defect/src/domain/: mod.rs
crates/cuba-defect/src/infrastructure/: repository.rs
crates/cuba-docs-gen/: Cargo.toml
crates/cuba-e2e/: Cargo.toml
crates/cuba-e2e/src/: lib.rs
crates/cuba-e2e/tests/: e2e_audit.rs  e2e_concurrency.rs  e2e_defect.rs  e2e_events.rs  e2e_http.rs  e2e_identity.rs  e2e_inbound_outbound.rs  e2e_inventory.rs  e2e_jwt.rs  e2e_metrics.rs  e2e_new_features.rs  e2e_preissue_cycle.rs  e2e_recovery.rs  e2e_reporting.rs  e2e_returns_pmc.rs  e2e_scheduler.rs  e2e_scrap.rs  e2e_stocktake.rs
crates/cuba-events/: Cargo.toml
crates/cuba-events/src/: lib.rs  types.rs  writer.rs
crates/cuba-identity/: Cargo.toml
crates/cuba-identity/src/: lib.rs
crates/cuba-identity/src/application/: commands.rs  dto.rs  mod.rs  queries.rs  service.rs  system_config.rs
crates/cuba-identity/src/domain/: errors.rs  mod.rs  model.rs
crates/cuba-identity/src/infrastructure/: mod.rs  repository.rs
crates/cuba-inbound/: Cargo.toml
crates/cuba-inbound/src/: lib.rs
crates/cuba-inbound/src/application/: mod.rs
crates/cuba-inbound/src/domain/: mod.rs
crates/cuba-inbound/src/infrastructure/: repository.rs
crates/cuba-inventory/: Cargo.toml
crates/cuba-inventory/benches/: rules_bench.rs
crates/cuba-inventory/src/: lib.rs
crates/cuba-inventory/src/application/: commands.rs  dto.rs  mod.rs  queries.rs  service.rs
crates/cuba-inventory/src/domain/: errors.rs  mod.rs  model.rs  rules.rs
crates/cuba-inventory/src/infrastructure/: mod.rs  repository.rs
crates/cuba-metrics/: Cargo.toml
crates/cuba-metrics/src/: lib.rs
crates/cuba-outbound/: Cargo.toml
crates/cuba-outbound/src/: lib.rs
crates/cuba-outbound/src/application/: mod.rs
crates/cuba-outbound/src/domain/: mod.rs
crates/cuba-outbound/src/infrastructure/: repository.rs
crates/cuba-pmc/: Cargo.toml
crates/cuba-pmc/src/: lib.rs  repo.rs  service.rs
crates/cuba-preissue/: Cargo.toml
crates/cuba-preissue/src/: lib.rs
crates/cuba-preissue/src/application/: mod.rs
crates/cuba-preissue/src/domain/: mod.rs
crates/cuba-preissue/src/infrastructure/: repository.rs
crates/cuba-recovery/: Cargo.toml
crates/cuba-recovery/src/: lib.rs
crates/cuba-recovery/src/application/: mod.rs
crates/cuba-recovery/src/domain/: mod.rs
crates/cuba-recovery/src/infrastructure/: repository.rs
crates/cuba-reporting/: Cargo.toml
crates/cuba-reporting/src/: lib.rs  service.rs
crates/cuba-scheduler/: Cargo.toml
crates/cuba-scheduler/src/: jobs.rs  lib.rs  runtime.rs
crates/cuba-scrap/: Cargo.toml
crates/cuba-scrap/src/: lib.rs
crates/cuba-scrap/src/application/: mod.rs
crates/cuba-scrap/src/domain/: mod.rs
crates/cuba-scrap/src/infrastructure/: repository.rs
crates/cuba-server/: Cargo.toml
crates/cuba-server/src/: main.rs
crates/cuba-shared/: Cargo.toml
crates/cuba-shared/src/: lib.rs  serde_helpers.rs
crates/cuba-shared/src/audit/: mod.rs
crates/cuba-shared/src/auth/: mod.rs
crates/cuba-shared/src/error/: codes.rs  mod.rs
crates/cuba-shared/src/event/: mod.rs
crates/cuba-shared/src/money/: mod.rs
crates/cuba-shared/src/pagination/: mod.rs
crates/cuba-shared/src/result/: mod.rs
crates/cuba-shared/src/time/: mod.rs
crates/cuba-shared/src/types/: mod.rs
crates/cuba-stocktake/: Cargo.toml
crates/cuba-stocktake/src/: lib.rs  repo.rs  service.rs
crates/cuba-supplier-return/: Cargo.toml
crates/cuba-supplier-return/src/: lib.rs  repo.rs  service.rs
crates/cuba-testkit/: Cargo.toml
crates/cuba-testkit/src/: fixtures.rs  http.rs  lib.rs
crates/cuba-warehouse/: Cargo.toml
crates/cuba-warehouse/src/: lib.rs
crates/cuba-warehouse/src/application/: mod.rs
crates/cuba-warehouse/src/domain/: mod.rs
crates/cuba-warehouse/src/infrastructure/: mod.rs  repository.rs
deploy/helm/cuba-ims/: Chart.yaml  values.yaml
deploy/helm/cuba-ims/templates/: _helpers.tpl  (+6 more)
migrations/: 0001_init.sql  0002_master_data.sql  0003_inventory.sql  0004_inbound_outbound.sql  0005_preissue.sql  0006_defect_recovery.sql  0007_returns.sql  0008_outsource_stocktake.sql  0009_reporting.sql  0010_seed.sql  0012_seed_permissions_patch.sql  0013_outbound_add_loc.sql  0014_scrap_add_extra.sql  0015_return_add_extra.sql  0016_sys_audit_log.sql  0017_jwt_revocation.sql  0018_multi_tenancy.sql  0019_scheduler.sql  0020_domain_events.sql  0021_new_permissions.sql  0022_index_tuning.sql
scripts/: db-reset.sh  dev-down.sh  dev-up.sh  test.sh  verify.sql
scripts/seed-data/: demo_data.sql
