[workspace]
resolver = "2"
members = [
    "crates/cuba-server",
    "crates/cuba-bootstrap",
    "crates/cuba-api",
    "crates/cuba-shared",
    "crates/cuba-testkit",
    "crates/cuba-e2e",
    "crates/cuba-inventory",
    "crates/cuba-warehouse",
    "crates/cuba-catalog",
    "crates/cuba-inbound",
    "crates/cuba-outbound",
    "crates/cuba-stocktake",
    "crates/cuba-preissue",
    "crates/cuba-defect",
    "crates/cuba-recovery",
    "crates/cuba-scrap",
    "crates/cuba-customer-return",
    "crates/cuba-supplier-return",
    "crates/cuba-pmc",
    "crates/cuba-reporting",
    "crates/cuba-identity",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Proprietary"
rust-version = "1.75"

[workspace.dependencies]
# --- Web framework ---
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "timeout"] }

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Database ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "macros", "bigdecimal"] }

# --- Common types ---
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
rust_decimal = { version = "1", features = ["serde", "db-postgres"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# --- Error handling ---
thiserror = "1"
anyhow = "1"

# --- Logging / Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# --- Validation ---
validator = { version = "0.18", features = ["derive"] }

# --- Config ---
config = "0.14"
dotenvy = "0.15"

# --- Utils ---
once_cell = "1"

# --- Auth ---
jsonwebtoken = "9"
bcrypt = "0.15"

# --- OpenAPI ---
utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# --- Internal crates (path deps) ---
cuba-shared = { path = "crates/cuba-shared" }
cuba-bootstrap = { path = "crates/cuba-bootstrap" }
cuba-api = { path = "crates/cuba-api" }
cuba-testkit = { path = "crates/cuba-testkit" }
cuba-inventory = { path = "crates/cuba-inventory" }
cuba-warehouse = { path = "crates/cuba-warehouse" }
cuba-catalog = { path = "crates/cuba-catalog" }
cuba-inbound = { path = "crates/cuba-inbound" }
cuba-outbound = { path = "crates/cuba-outbound" }
cuba-stocktake = { path = "crates/cuba-stocktake" }
cuba-preissue = { path = "crates/cuba-preissue" }
cuba-defect = { path = "crates/cuba-defect" }
cuba-recovery = { path = "crates/cuba-recovery" }
cuba-scrap = { path = "crates/cuba-scrap" }
cuba-customer-return = { path = "crates/cuba-customer-return" }
cuba-supplier-return = { path = "crates/cuba-supplier-return" }
cuba-pmc = { path = "crates/cuba-pmc" }
cuba-reporting = { path = "crates/cuba-reporting" }
cuba-identity = { path = "crates/cuba-identity" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
