[package]
name = "cuba-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cuba-shared = { workspace = true }
cuba-bootstrap = { workspace = true }
cuba-metrics = { workspace = true }

# 业务 crate 依赖(按模块落地进度逐步开)
cuba-inventory = { workspace = true }
cuba-identity = { workspace = true }
cuba-warehouse = { workspace = true }
cuba-catalog = { workspace = true }
cuba-inbound = { workspace = true }
cuba-outbound = { workspace = true }
cuba-preissue = { workspace = true }
cuba-defect = { workspace = true }
cuba-scrap = { workspace = true }
cuba-recovery = { workspace = true }
cuba-customer-return = { workspace = true }
cuba-supplier-return = { workspace = true }
cuba-pmc = { workspace = true }
cuba-stocktake = { workspace = true }
cuba-reporting = { workspace = true }
# cuba-inbound = { workspace = true }
# cuba-outbound = { workspace = true }
# cuba-stocktake = { workspace = true }
# cuba-preissue = { workspace = true }
# cuba-defect = { workspace = true }
# cuba-recovery = { workspace = true }
# cuba-scrap = { workspace = true }
# cuba-customer-return = { workspace = true }
# cuba-supplier-return = { workspace = true }
# cuba-pmc = { workspace = true }
# cuba-reporting = { workspace = true }
# cuba-identity = { workspace = true }

axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
