[package]
name = "cuba-bootstrap"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cuba-shared = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
