[package]
name = "cuba-docs-gen"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "errorcodes"
path = "src/bin/errorcodes.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
