[package]
name = "cuba-inventory"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cuba-shared = { workspace = true }
cuba-metrics = { workspace = true }
cuba-events = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
bigdecimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
cuba-testkit = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rules_bench"
harness = false
