[package]
name = "cuba-scheduler"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cuba-shared = { workspace = true }
cuba-metrics = { workspace = true }

tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
