[package]
name = "cuba-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "cuba-server"
path = "src/main.rs"

[dependencies]
cuba-bootstrap = { workspace = true }
cuba-api = { workspace = true }
cuba-shared = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
