[package]
name = "cuba-shared"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
once_cell = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
