[package]
name = "cuba-testkit"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cuba-shared = { workspace = true }
cuba-bootstrap = { workspace = true }
cuba-api = { workspace = true }

axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }

testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
bcrypt = { workspace = true }
