[package]
name = "cuba-warehouse"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
cuba-shared = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
cuba-testkit = { workspace = true }
